k8s/05-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: minijira
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/andreisalomia/minijira-backend:e5d128e
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        command: ["sh", "-c", "flask db upgrade && python seed.py && python run.py"]
