k8s/07-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: minijira
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/andreisalomia/minijira-frontend:e5d128e
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
