k8s/04-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: minijira
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
