k8s/06-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: minijira-backend
  namespace: minijira
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
