k8s/08-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: minijira-frontend
  namespace: minijira
spec:
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 3000
