k8s/11-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minijira
  namespace: minijira
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: minijira-backend
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minijira-frontend
            port:
              number: 3000
